@@ -129,6 +129,10 @@
 	Allowed moving files via :rename (requires an interactive confirmation).
 	Thanks to aleksejrs.
 
+	Made completion of an option with its current value work not only on
+	`opt=<tab>`, but also on `opt='<tab>` and `opt="<tab>`.  Thanks to
+	aleksejrs.
+
 	Fixed line number column not including padding to the left of it.
 
 	Fixed local options not being loaded on Ctrl-W x.
